fixed overlap

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -416,7 +416,7 @@ ul{
 }
 
 .back-to-top{
-    margin-top: -3%;
+    margin-top: 3%;
     margin-left: 6%;
 }
 
